fix: overflow on load

--- a/src/components/alert/styles.module.css
+++ b/src/components/alert/styles.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  grid-column: 1/4;
+  background: none;
 }
 
 @media (max-width: 1150px) {
